--- a/index.html
+++ b/index.html
@@ -220,11 +220,11 @@
             <p>&copy; 2022 All rights reserved Mobile to the Moon <span style="color: #ffff;">Created by</span> <span style="font-weight: bold;color: #ffff;">RS-DEVS</span> </p>
         </footer>
     </main>
-
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
-        crossorigin="anonymous"></script>
+        crossorigin="anonymous" defer></script>
     <script src="./js/main.js" type="module"></script>
 
 
